kubernetes/apps/app-cluster/media/jellyfin/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Media streaming server (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://jellyfin.krapulax.home"
    gethomepage.dev/icon: "jellyfin.png"
    gethomepage.dev/name: "Jellyfin (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - jellyfin.krapulax.home
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: media
          port: 8096
